kubernetes/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deploy
  namespace: smart-quiz-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend-ctr
          image: sretenglavinceski/devops-project-backend:latest
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: smart-quiz-app
spec:
  selector:
    app: backend
  ports:
    - protocol: TCP
      port: 9999
      targetPort: 8080
  type: ClusterIP
