kubernetes/db-deployment.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: quiz-db-deployment
  namespace: smart-quiz-app
spec:
  serviceName: "postgres-service"
  replicas: 3
  selector:
    matchLabels:
      app: quiz-db
  template:
    metadata:
      labels:
        app: quiz-db
    spec:
      containers:
        - name: postgres
          image: postgres:15
          ports:
            - containerPort: 5432
              name: postgres
          volumeMounts:
            - name: postgres-storage
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: postgres-storage
          persistentVolumeClaim:
            claimName: postgres-pvc

---
apiVersion: v1
kind: Service
metadata:
  name: postgres-service
  namespace: smart-quiz-app
spec:
  clusterIP: None
  selector:
    app: quiz-db
  ports:
    - port: 5432
      name: postgres
