kubernetes/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deploy
  namespace: smart-quiz-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend-ctr
          image: sretenglavinceski/devops-project-frontend:latest
          ports:
            - containerPort: 80
          volumeMounts:
            - name: env-config-volume
              mountPath: /usr/share/nginx/html/env-config.js
              subPath: env-config.js
      volumes:
        - name: env-config-volume
          configMap:
            name: frontend-env-config
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: smart-quiz-app
spec:
  selector:
    app: frontend
  ports:
    - protocol: TCP
      port: 9091
      targetPort: 80
  type: ClusterIP
