kubernetes/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: strip-backend-prefix
  namespace: smart-quiz-app
spec:
  stripPrefix:
    prefixes:
      - /backend

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: smart-quiz-ingress
  namespace: smart-quiz-app
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.entrypoints: web
    traefik.ingress.kubernetes.io/router.middlewares: smart-quiz-app-strip-backend-prefix@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
    - host: smartquiz.home
      http:
        paths:
          - path: /backend
            pathType: Prefix
            backend:
              service:
                name: backend-service
                port:
                  number: 9999
          - path: /admin
            pathType: Prefix
            backend:
              service:
                name: backend-service
                port:
                  number: 9999
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 9091
